# spamotoniko

./: Cargo.toml  README.md  index.html
src/: main.rs  spamotoniko.rs
